--- a/docs/css/custom.css
+++ b/docs/css/custom.css
@@ -1,12 +1,12 @@
 [data-md-color-scheme="default"] {
   --md-default-bg-color: #fff7ec;
-  --md-primary-fg-color: #000000;
+  --md-primary-fg-color: #B8271C;
   --md-typeset-a-color: #0099ff;
   --md-code-bg-color: #e7e7e7;
 }
 
 [data-md-color-scheme="slate"] {
-  --md-primary-fg-color: #000000;
+  --md-primary-fg-color: #B8271C;
   --md-default-fg-color: #fff7ec;
   --md-default-bg-color: #111111;
 }
